# figma-mcp

./: README.md  figma_api.py  pyproject.toml  requirements.txt  server.py
playground/: index.html  package-lock.json  package.json
playground/src/: App.tsx  app.css
playground/src/__tests__/: component-map.test.ts  decision-gates.test.ts  figma-to-css.test.ts  figma-to-html.test.ts  tree-utils.test.ts
playground/src/components/: DecisionPanel.tsx  HtmlPreview.tsx  NodeTree.tsx  NodeTreeItem.tsx  PropertiesPanel.tsx  RawJsonView.tsx  Toolbar.tsx
playground/src/lib/: component-map.ts  decision-gates.ts  figma-to-css.ts  figma-to-html.ts  tree-utils.ts
playground/src/store/: figmaStore.ts
playground/src/types/: figma.ts
samples/: 01_file_structure_raw.json  02_home_frame_full.json  03_content_frame.json  04_sections_all.json  07_exports_svg.json  08_tool_file_structure.json  09_tool_node_details.json  12_tool_exports.json  13_hyperplane_home.json
tests/: test_server.py
