[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figma-mcp"
version = "0.1.0"
description = "Design-to-code Figma MCP server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==3.1.0",
    "httpx==0.28.1",
]

[project.scripts]
figma-mcp = "server:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
